# Fastfetchspin

./: README.md  fastfetch_spin.py  pyproject.toml
